fixed white space on about

--- a/public/about.css
+++ b/public/about.css
@@ -404,8 +404,8 @@
     display: inline-grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 100% 100%;
-    column-gap: 10px;
-    row-gap: 10px;
+    column-gap: 5px;
+    row-gap: 5px;
   }
 
   .item1{
